--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,9 @@
        <!-- <item name="android:windowBackground">@mipmap/title</item>-->
 
     </style>
+    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
+        <item name="colorPrimary">#0000FF</item>
+    </style>
 
 
 
