--- a/app/src/main/res/layout/fragment_i_calendar.xml
+++ b/app/src/main/res/layout/fragment_i_calendar.xml
@@ -109,28 +109,19 @@
 
         <Button
             android:id="@+id/add_Btn"
-            android:layout_width="180dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginBottom="20dp"
             android:text="추가"
             android:visibility="invisible"
-            app:layout_constraintBaseline_toBaselineOf="@+id/save_Btn"
-            app:layout_constraintEnd_toStartOf="@+id/del_Btn"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/del_Btn"
-            android:layout_width="176dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="삭제"
-            android:visibility="invisible"
-            app:layout_constraintBaseline_toBaselineOf="@+id/add_Btn"
-            app:layout_constraintEnd_toEndOf="@+id/save_Btn"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contextEditText" />
 
 
 
