--- a/app/src/main/res/layout/custom_item_study_post.xml
+++ b/app/src/main/res/layout/custom_item_study_post.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="247dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants">
 
     <View
         android:layout_width="match_parent"
