--- a/app/src/main/res/layout/fragment_study_main.xml
+++ b/app/src/main/res/layout/fragment_study_main.xml
@@ -6,39 +6,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+
+
+    <TextView
+        android:id="@+id/tv_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:baselineAligned="false"
+        android:gravity="center"
+        android:text="사용자 님이 가입한 스터디"
+        android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/tv_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:baselineAligned="false"
-            android:gravity="center"
-            android:text="사용자 님이 가입한 스터디"
-            android:textSize="20dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginTop="5dp"
-            android:background="#cdcdcd" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginTop="5dp"
+        android:background="#cdcdcd" />
 
 
-        <ListView
-            android:id="@+id/lv_study_joined"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+    <ListView
+        android:id="@+id/lv_study_joined"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_weight="2"/>
 
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
