--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -34,10 +34,12 @@
             android:layout_marginStart="20dp"
             android:text="프로필"
             android:textSize="20sp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toTopOf="@+id/my_home_profile_iv"
             app:layout_constraintStart_toStartOf="@+id/my_home_profile_cl" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/my_home_profile_iv"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -51,7 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NAME"
-            android:textSize="28sp"
+            android:textSize="35sp"
+            android:layout_marginLeft="5dp"
             app:layout_constraintBottom_toTopOf="@id/my_home_profile_token_tv"
             app:layout_constraintStart_toEndOf="@id/my_home_profile_iv"
             app:layout_constraintTop_toTopOf="@id/my_home_profile_iv"
@@ -63,6 +66,7 @@
             android:layout_height="wrap_content"
             android:text="모은 토큰 개수 :"
             android:textSize="15sp"
+            android:layout_marginLeft="5dp"
             app:layout_constraintBottom_toBottomOf="@id/my_home_profile_iv"
             app:layout_constraintStart_toEndOf="@id/my_home_profile_iv"
             app:layout_constraintTop_toBottomOf="@id/my_home_profile_name_tv"
