--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#FF343434</color>
+
+
+    <color name="blue_main1">#C4DDFF</color>
+    <color name="navy">#001D6E</color>
+    <color name="beige">#FEE2C5</color>
+    <color name="blue_main2">#7FB5FF</color>
+
 </resources>
