--- a/app/src/main/res/layout/custom_item_study_joined.xml
+++ b/app/src/main/res/layout/custom_item_study_joined.xml
@@ -66,7 +66,15 @@
                     android:text="#tag1 #tag2 #tag3"
                     android:textColor="#0000ff" />
 
+
             </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/studyDescription"
+                android:text="스터디 설명"
+                android:layout_marginTop="15dp"/>
 
         </LinearLayout>
 
