Add : myHome_scroll

--- a/app/src/main/res/layout/expandable_liistview_parent.xml
+++ b/app/src/main/res/layout/expandable_liistview_parent.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:textSize="20sp"
         android:id="@+id/expand_parent_name_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"/>
+        android:padding="5dp"
+        android:gravity="center"/>
 
 </LinearLayout>
