--- a/app/src/main/res/layout/expandable_listview_child.xml
+++ b/app/src/main/res/layout/expandable_listview_child.xml
@@ -17,7 +17,8 @@
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@id/expand_child_did"
     app:layout_constraintStart_toStartOf="parent"
-    android:paddingLeft="10dp"/>
+    android:paddingLeft="10dp"
+        android:textSize="15sp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
