--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -82,6 +82,7 @@
             app:layout_constraintTop_toBottomOf="@id/my_home_profile_name_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <View
+        android:id="@+id/my_home_line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/black"
@@ -89,12 +90,13 @@
         app:layout_constraintTop_toBottomOf="@id/my_home_profile_cl"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"/>
+
     <TextView
         android:id="@+id/my_home_todo_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="오늘도 잘 하고 있어요!!"
-        app:layout_constraintTop_toBottomOf="@+id/my_home_profile_cl"
+        app:layout_constraintTop_toBottomOf="@+id/my_home_line"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="15dp"
         android:textSize="15sp" />
@@ -103,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="여기를 눌러서 오늘의 할일을 정해주세요"
-        app:layout_constraintTop_toBottomOf="@+id/my_home_todo_tv"
+        app:layout_constraintTop_toBottomOf="@id/my_home_line"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="15dp"
         android:textSize="15sp" />
@@ -116,15 +118,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.471"
         app:layout_constraintHorizontal_bias="0.495"/>
-    <ExpandableListView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/my_home_bar_chart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:fillViewport="true">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ExpandableListView
         android:id="@+id/my_home_listview"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_home_bar_chart">
+        />
 
-    </ExpandableListView>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
