0603 리스트 추가 삭제시 바로보임

--- a/app/src/main/res/layout/fragment_i_calendar.xml
+++ b/app/src/main/res/layout/fragment_i_calendar.xml
@@ -68,13 +68,13 @@
 
         <EditText
             android:id="@+id/contextEditText"
-            android:layout_width="237dp"
-            android:layout_height="112dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ems="10"
-            android:hint="indiv 일정"
+            android:hint="개인 일정을 추가하세요"
             android:inputType="textMultiLine"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:visibility="invisible"
+            android:layout_marginTop="25dp"
             app:layout_constraintBottom_toBottomOf="@+id/contextEditText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/contextEditText"
@@ -98,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="25dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="20dp"
@@ -114,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="25dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="20dp"
