검색 끝, 가입이랑 게시글 남음

--- a/app/src/main/res/layout/activity_study_find.xml
+++ b/app/src/main/res/layout/activity_study_find.xml
@@ -41,10 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp">
 
-            <ImageView
+            <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
+                android:id="@+id/studySearchButton"
                 app:srcCompat="@drawable/ic_search" />
 
             <LinearLayout
@@ -60,7 +61,7 @@
                     android:layout_height="match_parent"
 
                     android:background="@android:color/transparent"
-                    android:hint="#태그를 입력해 주세요"
+                    android:hint="검색어를 입력해 주세요"
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
