--- a/app/src/main/res/layout/activity_study_studygroup.xml
+++ b/app/src/main/res/layout/activity_study_studygroup.xml
@@ -1,52 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
-            <ImageButton
-                android:id="@+id/btn_studygroup_back"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:background="@android:color/transparent"
-                android:contentDescription="뒤로가기"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ic_back"
-                tools:ignore="TouchTargetSizeCheck" />
+
 
             <TextView
                 android:id="@+id/tv_studygroup_title"
-                android:layout_width="320dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20dp"
                 android:text="스터디 1"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:layout_weight="2"/>
+
+            <ImageButton
+                android:id="@+id/btn_studygroup_write_post"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@color/white"
+                android:contentDescription="개시글 작성 버튼"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_bulletin"
+                android:layout_marginRight="30dp"/>
 
             <ImageButton
                 android:id="@+id/btn_studygroup_setting"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="설정"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_study_settings"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="TouchTargetSizeCheck"
+                android:layout_marginRight="20dp"/>
 
         </LinearLayout>
 
@@ -58,33 +56,13 @@
         <ListView
             android:id="@+id/lv_studygroup_posts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp">
 
         </ListView>
 
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
-        <ImageButton
-            android:id="@+id/btn_studygroup_write_post"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="300dp"
-            android:layout_marginTop="600dp"
-            android:background="@color/white"
-            android:contentDescription="개시글 작성 버튼"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_bulletin" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</LinearLayout>
