--- a/app/src/main/res/layout/activity_study_post.xml
+++ b/app/src/main/res/layout/activity_study_post.xml
@@ -6,27 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/btn_studypost_back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:contentDescription="뒤로가기"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_back"
-            tools:ignore="TouchTargetSizeCheck" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -88,7 +67,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="본문 내용"
-                        android:textSize="15dp" />
+                        android:textSize="20dp" />
 
                     <TextView
                         android:id="@+id/tv_post_tags"
@@ -249,14 +228,14 @@
                 android:layout_height="2dp"
                 android:background="?android:attr/listDivider" />
 
-            <GridView
+            <ListView
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/postCommentView"
                 android:scrollbars="none" />
 
         </LinearLayout>
 
-    </ScrollView>
 
 
 </LinearLayout>
