--- a/app/src/main/res/layout/activity_study_setting.xml
+++ b/app/src/main/res/layout/activity_study_setting.xml
@@ -2,25 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="400dp"
+    android:layout_height="340dp"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btn_study_setting_back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:contentDescription="뒤로가기"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_back"
-            tools:ignore="TouchTargetSizeCheck" />
+
 
         <TextView
             android:id="@+id/textView"
