--- a/app/src/main/res/layout/dialog_show.xml
+++ b/app/src/main/res/layout/dialog_show.xml
@@ -41,6 +41,36 @@
         android:textSize="20dp"
         />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/del_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제"
+            android:layout_gravity="center"
+            />
+
+        <Button
+            android:id="@+id/ok_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OK"
+            android:layout_gravity="center"
+            />
+
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
+
     <!--    <ImageButton-->
     <!--        android:layout_width="80dp"-->
     <!--        android:layout_height="80dp"-->
@@ -48,6 +78,3 @@
     <!--        android:layout_marginTop="50dp"-->
     <!--        android:background="@drawable/editing"-->
     <!--        android:id="@+id/endEditItem"/>-->
-
-
-</LinearLayout>
