ui업뎃, 폰트안바뀐 부분 찾아서 바꿔주기

--- a/app/src/main/res/layout/fragment_board_item_new.xml
+++ b/app/src/main/res/layout/fragment_board_item_new.xml
@@ -204,7 +204,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/addCommentButtonBoardItem"
-            android:background="@drawable/write_icon"
+            android:background="@drawable/editing"
             android:layout_marginLeft="10dp"/>
 
 
