--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="8"
-        app:itemBackground="@color/white"
+        app:itemBackground="@color/background"
         app:itemIconSize="25dp"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/nav_menu" />
