--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.MobileTerm" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#354259</item>
+        <item name="colorPrimaryVariant">#CDC2AE</item>
+        <item name="colorOnPrimary">#C2DED1</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#ECE5C7</item>
+        <item name="colorSecondaryVariant">#C2DED1</item>
+        <item name="colorOnSecondary">#354259</item>
+        <item name="android:windowBackground">#ECE5C7</item>
+        <item name="android:navigationBarColor">#C2DED1</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
