--- a/app/src/main/res/layout/fragment_board_item_view.xml
+++ b/app/src/main/res/layout/fragment_board_item_view.xml
@@ -60,7 +60,7 @@
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:scaleType="fitXY"
-           android:background="@drawable/like_icon"/>
+           android:background="@drawable/ic_heart"/>
 
        <TextView
            android:layout_width="wrap_content"
