--- a/app/src/main/res/layout/custom_item_study_joined.xml
+++ b/app/src/main/res/layout/custom_item_study_joined.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <View
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="8"
         android:orientation="vertical">
 
@@ -73,6 +73,13 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/studyDescription"
                 android:text="스터디 설명"
+                android:layout_marginTop="15dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/studyAddress"
+                android:text="주소"
                 android:layout_marginTop="15dp"/>
 
         </LinearLayout>
