현재 지역 스터디가 스터디 찾기에서 먼저보임, 이제 공유스케줄해야함

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="예) onoff@onoff.co.kr"
+            android:hint="예) swu@swu.co.kr"
             android:inputType="textEmailAddress" />
         <TextView
             android:layout_width="wrap_content"
